--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,7 @@ body * {
 body {font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
 
 
-header,
-main,
-footer {
+.container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,55 +16,69 @@ footer {
     margin: 30px calc((100% - 800px) / 2);
     }
 
-header {
-    
 
-    }
-    header > img {
+
+ 
+    .logo {
         height: 30px;
         width: 200px;
         object-fit: contain;
         object-position: center left;
     }
     
-    nav {
+    .main-nav {
         display: flex;
         gap: 30px;
     }
-    nav > a {
+    .link {
         color: #000;
         text-decoration: none;
         font-size: 18px;
     }
-    nav > a:hover {
+    .link:hover {
         color: #55337A;
         text-decoration: underline;
     }
 
-main {
-    }
 
-   main > div {
+
+   .left-column {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     width: 40%;
 
    }
 
-   h1 {
+   .main-title {
+    font-size: 32px;
+   }
+   .main-title span {
+    display: block;
+    font-weight: normal;
     }
-   p {
+.main-title::after {
+    content: '';
+    display: block;
+    width: 100px;
+    height: 5px;
+    margin-top: 10px;
+    background-color: #55337A;
+}
+
+
+ .descriptio {
+    color: #555
     }
 
-    div > div {
+    .button-group {
         display: flex;
         flex-wrap: wrap;
         font-size: 18px;
         gap: 1em;
     }
 
-   div > a {
+    .button {
     display: inline-block;
     padding: 1em 2.5em;
     background-color: #55337A;
@@ -79,14 +91,20 @@ main {
     border:  0.1em solid #55337A;
     user-select: none;
    }
-    div > a:hover {
+    .button:hover {
         background-color: #fff;
         color: #55337A;
        }
    
-   main > img {
+   .right-column {
        width: 55%;
    }
 
-footer {
-    background-color: lightgoldenrodyellow;}
+   .socials {
+
+   }
+
+   .copyright {
+    
+   }
+
