--- a/css/main.css
+++ b/css/main.css
@@ -5,106 +5,47 @@ body * {
     box-sizing: border-box;
 }
 
-body {font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
-
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+        sans-serif;
+}
 
 .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 900px;
-    margin: 30px calc((100% - 800px) / 2);
-    }
+    margin: 30px calc((100% - 900px) / 2);
+}
 
-
-
- 
-    .logo {
-        height: 30px;
-        width: 200px;
-        object-fit: contain;
-        object-position: center left;
-    }
-    
-    .main-nav {
-        display: flex;
-        gap: 30px;
-    }
-    .link {
-        color: #000;
-        text-decoration: none;
-        font-size: 18px;
-    }
-    .link:hover {
-        color: #55337A;
-        text-decoration: underline;
-    }
-
-
-
-   .left-column {
+.left-column {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
     width: 40%;
+}
 
-   }
-
-   .main-title {
+.main-title {
     font-size: 32px;
-   }
-   .main-title span {
+}
+.main-title > span {
     display: block;
     font-weight: normal;
-    }
+}
 .main-title::after {
     content: '';
     display: block;
     width: 100px;
     height: 5px;
     margin-top: 10px;
-    background-color: #55337A;
+    background-color: #55337a;
 }
 
+.description {
+    color: #555;
+}
 
- .descriptio {
-    color: #555
-    }
-
-    .button-group {
-        display: flex;
-        flex-wrap: wrap;
-        font-size: 18px;
-        gap: 1em;
-    }
-
-    .button {
-    display: inline-block;
-    padding: 1em 2.5em;
-    background-color: #55337A;
-    color: #fff;
-    font-size: 18px;
-    line-height: 1em;
-    text-transform: uppercase;
-    text-decoration: none;
-    border-radius: 1.6em;
-    border:  0.1em solid #55337A;
-    user-select: none;
-   }
-    .button:hover {
-        background-color: #fff;
-        color: #55337A;
-       }
-   
-   .right-column {
-       width: 55%;
-   }
-
-   .socials {
-
-   }
-
-   .copyright {
-    
-   }
+.right-column {
+    width: 55%;
+}
 
